# django-react-blog

./: .gitignore  docker-compose.yml
client/: .eslintrc.json  .prettierrc.json  Dockerfile  package.json
client/src/: Ap.tsx  App.tsx
server/: .dockerignore  .gitignore  Dockerfile  Makefile  manage.py  mypy.ini  pyproject.toml  setup.cfg
server/blog/: models.py  routers.py  serializers.py  settings.py  urls.py  views.py
server/tests/: base.py  factories.py  test_posts.py
